--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
     "name": "idigy",
     "version": "1.1.0",
     "description": "idigy is package to generate unique ids",
-    "main": "lib/index.js",
-    "types": "lib/index.d.ts",
+    "main": "lib/cjs/index.js",
+    "module": "lib/mjs/index.js",
+    "exports": {
+        ".": {
+            "import": "./lib/mjs/index.js",
+            "require": "./lib/cjs/index.js"
+        }
+    },
+    "types": "lib/mjs/index.d.ts",
     "scripts": {
         "test": "jest",
-        "build": "tsc"
+        "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
     },
     "keywords": [
         "id",
