--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,8 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "display": "Node 18",
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "lib": ["es2022"],
-        "module": "commonjs",
-        "target": "es2022",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "outDir": "lib",
-        "declaration": true
-    },
-
-    "include": ["src/**/*"],
-    "exclude": ["test", "node_modules"]
+        "module": "esnext",
+        "outDir": "lib/mjs",
+        "target": "esnext"
+    }
 }
