--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
     "name": "idigy",
     "version": "1.1.1",
     "description": "idigy is package to generate unique ids",
-    "main": "lib/cjs/index.js",
-    "module": "lib/mjs/index.js",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./lib/mjs/index.js",
-            "require": "./lib/cjs/index.js"
+            "require": "./dist/index.js",
+            "import": "./dist/index.mjs",
+            "types": "./dist/index.d.ts"
         }
     },
-    "types": "lib/mjs/index.d.ts",
     "scripts": {
         "test": "jest",
-        "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
+        "build": "tsup src --format cjs,esm --dts --clean"
     },
     "keywords": [
         "id",
@@ -30,10 +31,11 @@
         "jest": "^29.3.1",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
+        "tsup": "^6.5.0",
         "typescript": "^4.9.4"
     },
     "files": [
-        "lib",
+        "dist",
         "README.md",
         "package.json"
     ],
