--- a/package.json
+++ b/package.json
@@ -2,19 +2,12 @@
     "name": "idigy",
     "version": "1.1.2",
     "description": "idigy is package to generate unique ids",
-    "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
-    "exports": {
-        ".": {
-            "require": "./dist/index.js",
-            "import": "./dist/index.mjs",
-            "types": "./dist/index.d.ts"
-        }
-    },
+    "main": "./lib/cjs/index.js",
+    "module": "./lib/index.js",
+    "types": "./lib/index.d.ts",
     "scripts": {
         "test": "jest",
-        "build": "tsup src --format cjs,esm --dts --clean"
+        "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
     },
     "keywords": [
         "id",
@@ -31,11 +24,10 @@
         "jest": "^29.3.1",
         "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
-        "tsup": "^6.5.0",
         "typescript": "^4.9.4"
     },
     "files": [
-        "dist",
+        "lib",
         "README.md",
         "package.json"
     ],
