--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,7 +2,6 @@
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
         "module": "commonjs",
-        "outDir": "lib/cjs",
-        "target": "es2015"
+        "outDir": "lib/cjs"
     }
 }
