--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "module": "esnext",
-        "outDir": "lib/mjs",
-        "target": "esnext"
+        "target": "ES2015",
+        "module": "ES2020",
+        "outDir": "lib"
     }
 }
